# sphinxcontrib-svg2pdfconverter

./: .gitignore  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
example/: conf.py  index.rst
sphinxcontrib/: __init__.py  cairosvgconverter.py  inkscapeconverter.py  rsvgconverter.py
sphinxcontrib/cairosvgconverter/: __init__.py  cairosvgconverter.py
sphinxcontrib/inkscapeconverter/: __init__.py  inkscapeconverter.py
sphinxcontrib/rsvgconverter/: __init__.py  rsvgconverter.py
